// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ItemHeader renders with custom registry item 1`] = `

<div
  class="flex w-full justify-between gap-4 p-6"
  style="opacity: 0;"
>
  <div class="flex gap-4">
    <gui-avatar classname="size-24">
      <gui-avatar-image
        classname="rounded-md border-[1px] bg-secondary object-cover"
        src="https://example.com/favicon.png"
        alt="Example Favicon"
      >
      </gui-avatar-image>
      <gui-avatar-fallback classname="flex h-full w-full items-center justify-center rounded-md border-[1px]">
        <div class="to:to-neutral-400 h-full w-full rounded-md bg-gradient-to-t from-neutral-100 dark:from-neutral-500 dark:to-neutral-800">
        </div>
      </gui-avatar-fallback>
    </gui-avatar>
    <div class="flex h-full max-w-[250px] flex-col justify-between">
      <div class="flex flex-col gap-0.5">
        <div class="flex items-center gap-2">
          <gui-tooltip-provider>
            <gui-tooltip>
              <gui-tooltip-trigger classname="cursor-default truncate align-baseline text-lg font-medium">
                item
                <gui-inline-code
                  variant="monoGhost"
                  classname="text-sm"
                >
                  1.0.0
                </gui-inline-code>
              </gui-tooltip-trigger>
              <gui-tooltip-content classname="text-baseline text-sm font-medium">
                item
                <span class="font-normal text-muted-foreground">
                  1.0.0
                </span>
              </gui-tooltip-content>
            </gui-tooltip>
          </gui-tooltip-provider>
          <gui-tooltip-provider>
            <gui-tooltip>
              <gui-tooltip-trigger classname="flex items-center justify-center">
                <gui-badge
                  variant="outline"
                  classname="cursor-default bg-secondary p-0.5 outline-[1px] outline-border"
                >
                  <gui-info-icon
                    classname="text-muted-foreground"
                    size="16"
                  >
                  </gui-info-icon>
                </gui-badge>
              </gui-tooltip-trigger>
              <gui-tooltip-content>
                Newer versions available
              </gui-tooltip-content>
            </gui-tooltip>
          </gui-tooltip-provider>
        </div>
        <gui-tooltip-provider>
          <gui-tooltip>
            <gui-tooltip-trigger classname="flex h-full w-full cursor-default items-center justify-start overflow-hidden">
              <gui-inline-code
                variant="mono"
                classname="mx-0 truncate"
              >
                custom:item@1.0.0
              </gui-inline-code>
            </gui-tooltip-trigger>
            <gui-tooltip-content>
              https://example.com
            </gui-tooltip-content>
          </gui-tooltip>
        </gui-tooltip-provider>
      </div>
      <div class="flex items-center gap-2">
        <img
          class="size-5 rounded-full outline outline-[1px] outline-border"
          src="https://example.com/avatar.png"
          alt="John Doe"
        >
        <gui-tooltip-provider>
          <gui-tooltip>
            <gui-tooltip-trigger classname="text-baseline cursor-default text-xs font-medium text-muted-foreground">
              Published by:
              <span class="text-foreground">
                John Doe
              </span>
            </gui-tooltip-trigger>
            <gui-tooltip-content align="start">
              John Doe john@example.com
            </gui-tooltip-content>
          </gui-tooltip>
        </gui-tooltip-provider>
      </div>
    </div>
  </div>
  <div
    class="flex w-fit flex-col"
    style="opacity: 0;"
  >
    <div class="flex w-fit flex-col items-end self-end text-right">
      <gui-spark-area-chart
        data
        categories="downloads"
        index="day"
        colors="emerald"
        classname="w-full"
      >
      </gui-spark-area-chart>
      <p class="text-baseline mt-1 w-full self-end whitespace-nowrap text-sm font-medium text-foreground">
        123,456
        <span class="text-muted-foreground">
          Weekly Downloads
        </span>
      </p>
    </div>
  </div>
</div>

`;

exports[`ItemHeader renders with default git host item 1`] = `

<div
  class="flex w-full justify-between gap-4 p-6"
  style="opacity: 0;"
>
  <div class="flex gap-4">
    <gui-avatar classname="size-24">
      <gui-avatar-image
        classname="rounded-md border-[1px] bg-secondary object-cover"
        src="https://example.com/favicon.png"
        alt="Example Favicon"
      >
      </gui-avatar-image>
      <gui-avatar-fallback classname="flex h-full w-full items-center justify-center rounded-md border-[1px]">
        <div class="to:to-neutral-400 h-full w-full rounded-md bg-gradient-to-t from-neutral-100 dark:from-neutral-500 dark:to-neutral-800">
        </div>
      </gui-avatar-fallback>
    </gui-avatar>
    <div class="flex h-full max-w-[250px] flex-col justify-between">
      <div class="flex flex-col gap-0.5">
        <div class="flex items-center gap-2">
          <gui-tooltip-provider>
            <gui-tooltip>
              <gui-tooltip-trigger classname="cursor-default truncate align-baseline text-lg font-medium">
                item
                <gui-inline-code
                  variant="monoGhost"
                  classname="text-sm"
                >
                  1.0.0
                </gui-inline-code>
              </gui-tooltip-trigger>
              <gui-tooltip-content classname="text-baseline text-sm font-medium">
                item
                <span class="font-normal text-muted-foreground">
                  1.0.0
                </span>
              </gui-tooltip-content>
            </gui-tooltip>
          </gui-tooltip-provider>
          <gui-tooltip-provider>
            <gui-tooltip>
              <gui-tooltip-trigger classname="flex items-center justify-center">
                <gui-badge
                  variant="outline"
                  classname="cursor-default bg-secondary p-0.5 outline-[1px] outline-border"
                >
                  <gui-info-icon
                    classname="text-muted-foreground"
                    size="16"
                  >
                  </gui-info-icon>
                </gui-badge>
              </gui-tooltip-trigger>
              <gui-tooltip-content>
                Newer versions available
              </gui-tooltip-content>
            </gui-tooltip>
          </gui-tooltip-provider>
        </div>
        <gui-inline-code classname="mx-0">
          git:{ref}
        </gui-inline-code>
      </div>
      <div class="flex items-center gap-2">
        <img
          class="size-5 rounded-full outline outline-[1px] outline-border"
          src="https://example.com/avatar.png"
          alt="John Doe"
        >
        <gui-tooltip-provider>
          <gui-tooltip>
            <gui-tooltip-trigger classname="text-baseline cursor-default text-xs font-medium text-muted-foreground">
              Published by:
              <span class="text-foreground">
                John Doe
              </span>
            </gui-tooltip-trigger>
            <gui-tooltip-content align="start">
              John Doe john@example.com
            </gui-tooltip-content>
          </gui-tooltip>
        </gui-tooltip-provider>
      </div>
    </div>
  </div>
  <div
    class="flex w-fit flex-col"
    style="opacity: 0;"
  >
    <div class="flex w-fit flex-col items-end self-end text-right">
      <gui-spark-area-chart
        data
        categories="downloads"
        index="day"
        colors="emerald"
        classname="w-full"
      >
      </gui-spark-area-chart>
      <p class="text-baseline mt-1 w-full self-end whitespace-nowrap text-sm font-medium text-foreground">
        123,456
        <span class="text-muted-foreground">
          Weekly Downloads
        </span>
      </p>
    </div>
  </div>
</div>

`;

exports[`ItemHeader renders with default item 1`] = `

<div
  class="flex w-full justify-between gap-4 p-6"
  style="opacity: 0;"
>
  <div class="flex gap-4">
    <gui-avatar classname="size-24">
      <gui-avatar-image
        classname="rounded-md border-[1px] bg-secondary object-cover"
        src="https://example.com/favicon.png"
        alt="Example Favicon"
      >
      </gui-avatar-image>
      <gui-avatar-fallback classname="flex h-full w-full items-center justify-center rounded-md border-[1px]">
        <div class="to:to-neutral-400 h-full w-full rounded-md bg-gradient-to-t from-neutral-100 dark:from-neutral-500 dark:to-neutral-800">
        </div>
      </gui-avatar-fallback>
    </gui-avatar>
    <div class="flex h-full max-w-[250px] flex-col justify-between">
      <div class="flex flex-col gap-0.5">
        <div class="flex items-center gap-2">
          <gui-tooltip-provider>
            <gui-tooltip>
              <gui-tooltip-trigger classname="cursor-default truncate align-baseline text-lg font-medium">
                item
                <gui-inline-code
                  variant="monoGhost"
                  classname="text-sm"
                >
                  1.0.0
                </gui-inline-code>
              </gui-tooltip-trigger>
              <gui-tooltip-content classname="text-baseline text-sm font-medium">
                item
                <span class="font-normal text-muted-foreground">
                  1.0.0
                </span>
              </gui-tooltip-content>
            </gui-tooltip>
          </gui-tooltip-provider>
          <gui-tooltip-provider>
            <gui-tooltip>
              <gui-tooltip-trigger classname="flex items-center justify-center">
                <gui-badge
                  variant="outline"
                  classname="cursor-default bg-secondary p-0.5 outline-[1px] outline-border"
                >
                  <gui-info-icon
                    classname="text-muted-foreground"
                    size="16"
                  >
                  </gui-info-icon>
                </gui-badge>
              </gui-tooltip-trigger>
              <gui-tooltip-content>
                Newer versions available
              </gui-tooltip-content>
            </gui-tooltip>
          </gui-tooltip-provider>
        </div>
      </div>
      <div class="flex items-center gap-2">
        <img
          class="size-5 rounded-full outline outline-[1px] outline-border"
          src="https://example.com/avatar.png"
          alt="John Doe"
        >
        <gui-tooltip-provider>
          <gui-tooltip>
            <gui-tooltip-trigger classname="text-baseline cursor-default text-xs font-medium text-muted-foreground">
              Published by:
              <span class="text-foreground">
                John Doe
              </span>
            </gui-tooltip-trigger>
            <gui-tooltip-content align="start">
              John Doe john@example.com
            </gui-tooltip-content>
          </gui-tooltip>
        </gui-tooltip-provider>
      </div>
    </div>
  </div>
  <div
    class="flex w-fit flex-col"
    style="opacity: 0;"
  >
    <div class="flex w-fit flex-col items-end self-end text-right">
      <gui-spark-area-chart
        data
        categories="downloads"
        index="day"
        colors="emerald"
        classname="w-full"
      >
      </gui-spark-area-chart>
      <p class="text-baseline mt-1 w-full self-end whitespace-nowrap text-sm font-medium text-foreground">
        123,456
        <span class="text-muted-foreground">
          Weekly Downloads
        </span>
      </p>
    </div>
  </div>
</div>

`;

exports[`ItemHeader renders with scoped registry item 1`] = `

<div
  class="flex w-full justify-between gap-4 p-6"
  style="opacity: 0;"
>
  <div class="flex gap-4">
    <gui-avatar classname="size-24">
      <gui-avatar-image
        classname="rounded-md border-[1px] bg-secondary object-cover"
        src="https://example.com/favicon.png"
        alt="Example Favicon"
      >
      </gui-avatar-image>
      <gui-avatar-fallback classname="flex h-full w-full items-center justify-center rounded-md border-[1px]">
        <div class="to:to-neutral-400 h-full w-full rounded-md bg-gradient-to-t from-neutral-100 dark:from-neutral-500 dark:to-neutral-800">
        </div>
      </gui-avatar-fallback>
    </gui-avatar>
    <div class="flex h-full max-w-[250px] flex-col justify-between">
      <div class="flex flex-col gap-0.5">
        <div class="flex items-center gap-2">
          <gui-tooltip-provider>
            <gui-tooltip>
              <gui-tooltip-trigger classname="cursor-default truncate align-baseline text-lg font-medium">
                item
                <gui-inline-code
                  variant="monoGhost"
                  classname="text-sm"
                >
                  1.0.0
                </gui-inline-code>
              </gui-tooltip-trigger>
              <gui-tooltip-content classname="text-baseline text-sm font-medium">
                item
                <span class="font-normal text-muted-foreground">
                  1.0.0
                </span>
              </gui-tooltip-content>
            </gui-tooltip>
          </gui-tooltip-provider>
          <gui-tooltip-provider>
            <gui-tooltip>
              <gui-tooltip-trigger classname="flex items-center justify-center">
                <gui-badge
                  variant="outline"
                  classname="cursor-default bg-secondary p-0.5 outline-[1px] outline-border"
                >
                  <gui-info-icon
                    classname="text-muted-foreground"
                    size="16"
                  >
                  </gui-info-icon>
                </gui-badge>
              </gui-tooltip-trigger>
              <gui-tooltip-content>
                Newer versions available
              </gui-tooltip-content>
            </gui-tooltip>
          </gui-tooltip-provider>
        </div>
        <gui-tooltip-provider>
          <gui-tooltip>
            <gui-tooltip-trigger classname="flex h-full w-full cursor-default items-center justify-start overflow-hidden">
              <gui-inline-code
                variant="mono"
                classname="mx-0 truncate"
              >
                item@1.0.0
              </gui-inline-code>
            </gui-tooltip-trigger>
            <gui-tooltip-content>
              http://custom-scope
            </gui-tooltip-content>
          </gui-tooltip>
        </gui-tooltip-provider>
      </div>
      <div class="flex items-center gap-2">
        <img
          class="size-5 rounded-full outline outline-[1px] outline-border"
          src="https://example.com/avatar.png"
          alt="John Doe"
        >
        <gui-tooltip-provider>
          <gui-tooltip>
            <gui-tooltip-trigger classname="text-baseline cursor-default text-xs font-medium text-muted-foreground">
              Published by:
              <span class="text-foreground">
                John Doe
              </span>
            </gui-tooltip-trigger>
            <gui-tooltip-content align="start">
              John Doe john@example.com
            </gui-tooltip-content>
          </gui-tooltip>
        </gui-tooltip-provider>
      </div>
    </div>
  </div>
  <div
    class="flex w-fit flex-col"
    style="opacity: 0;"
  >
    <div class="flex w-fit flex-col items-end self-end text-right">
      <gui-spark-area-chart
        data
        categories="downloads"
        index="day"
        colors="emerald"
        classname="w-full"
      >
      </gui-spark-area-chart>
      <p class="text-baseline mt-1 w-full self-end whitespace-nowrap text-sm font-medium text-foreground">
        123,456
        <span class="text-muted-foreground">
          Weekly Downloads
        </span>
      </p>
    </div>
  </div>
</div>

`;
